--- a/Documents/Presentation/ZigBee.tex
+++ b/Documents/Presentation/ZigBee.tex
@@ -11,7 +11,7 @@
 				\item ZigBee is the specification it talks over ('Protocol')
 			\end{itemize}				
 	\end{itemize}
-	
+}
 
 % - Compare specification to Bluetooth (relatable)
 % - Low power, low data rate communication over digi radios
@@ -29,7 +29,7 @@
 		\item Based on 802.15.4 (PAN standard)
 		\item 'Slightly' open-source
 	\end{itemize}
-	
+}
 
 % - ZigBee forms Mesh network on it's own
 % 		save for some configurations in hardware
@@ -48,7 +48,7 @@
 		\item Localized and yet expandable network
 		\item Has it's own encryption
 	\end{itemize}
-
+}
 
 % - Any ZigBee Mesh has only one Coordinator,
 %		which administrates and maintains Mesh.
@@ -70,6 +70,7 @@
 		\item Addressing scheme supports 
 		\item Supports many network topologies
 	\end{itemize}
+}
 
 
 % - Network types supported:
@@ -79,5 +80,6 @@
 \frame{\frametitle{Network Topology Examples}
 \begin{figure}
 \centering
-\includegraphics[scale=.8]{Diagrams/ZigBeeNetworkTypes.png}
+%\includegraphics[scale=.8]{Diagrams/ZigBeeNetworkTypes.png}
 \end{figure}
+}
