--- a/Documents/Presentation/index.tex
+++ b/Documents/Presentation/index.tex
@@ -74,38 +74,28 @@
 
 \section{Requirements}
 
+\section{The People}
+\input{charles}
+%\input{grace}
+\input{nate}
+%\input{niloc}
 
 
-\section{How is it made?}
 
+\section{Architectural Design}
 
+\section{Satellite Hardware}
 
-\section{Problems Addressed}
+\input{ZigBee}
+\input{satellite}
 
+\section{Software and Server}
 
-\section{Sample Implementation}
+\input{software}
 
-
-\section{Questions}
+\section{Conclusions}
 
 \input{questions}
-
-    %% Emily
-    %%  - What is
-    %%  - Who for
-    %%
-    %% Kyle
-    %%  - Network Topology
-    %%  - Problems Addressed (Network Things)
-    %%
-    %% Charles
-    %%  - Sotware Architecture
-    %%  - Problems Addressed (Software Things)
-    %%
-    %% Hoang
-    %%  - Sample implementation details
-    %%  - Implementation
-
 
 \end{document}
 
