--- a/Documents/Presentation/satellite.tex
+++ b/Documents/Presentation/satellite.tex
@@ -5,7 +5,7 @@
 \frame {
  \frametitle{Satellite Overview}
  \begin{itemize}
-
+  \item Filler
  \end{itemize}
 }
 
@@ -19,3 +19,4 @@
 
 \frame{
  \frametitle{Communications Hardware}
+}
