--- a/Documents/Presentation/ZigBee.tex
+++ b/Documents/Presentation/ZigBee.tex
@@ -80,6 +80,6 @@
 \frame{\frametitle{Network Topology Examples}
 \begin{figure}
 \centering
-%\includegraphics[scale=.8]{Diagrams/ZigBeeNetworkTypes.png}
+\includegraphics[scale=.8]{Diagrams/ZigBeeNetworkTypes.png}
 \end{figure}
 }
