More small changes
git-svn-id: svn://dunari.cis.vtc.edu/POWER@239 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Presentation/index.tex
+++ b/Documents/Presentation/index.tex
@@ -82,14 +82,14 @@
 
 
 
-\section{Architectural Design}
+\section{Architecture}
 
 \section{Satellite Hardware}
 
 \input{ZigBee}
 \input{satellite}
 
-\section{Software and Server}
+\section{Software}
 
 \input{software}
 
