--- a/Documents/Presentation/charles.tex
+++ b/Documents/Presentation/charles.tex
@@ -1,6 +1,7 @@
 \subsection{What I'm working on - Charles}
 
 \frame{
+ \frametitle{What I'm working on - Charles}
  \begin{itemize}
   \item Overall software architecture
   \item The server software/hardware
