--- a/Documents/Presentation/nate.tex
+++ b/Documents/Presentation/nate.tex
@@ -1,6 +1,7 @@
 \subsection{What I'm working  on - Nate}
 
 \frame{
+ \frametitle{What I'm working on - Nate}
  \begin{itemize}
   \item Satellite
  \end{itemize}
