Moved \section stuff. Added a title to the "Niloc" slide
git-svn-id: svn://dunari.cis.vtc.edu/POWER@240 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Presentation/index.tex
+++ b/Documents/Presentation/index.tex
@@ -78,18 +78,14 @@
 \input{charles}
 %\input{grace}
 \input{nate}
-%\input{niloc}
+\input{niloc}
 
 
 
 \section{Architecture}
 
-\section{Satellite Hardware}
-
 \input{ZigBee}
 \input{satellite}
-
-\section{Software}
 
 \input{software}
 
