--- a/Documents/Presentation/niloc.tex
+++ b/Documents/Presentation/niloc.tex
@@ -1,6 +1,7 @@
 \subsection{What I'm working on - Niloc}
 
 \frame{
+ \frametitle{What I'm working on - Niloc}
  \begin{itemize}
   \item Prototyping hardware
   \item ZigBee specification  
