git-svn-id: svn://dunari.cis.vtc.edu/POWER@241 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Presentation/ZigBee.tex
+++ b/Documents/Presentation/ZigBee.tex
@@ -74,12 +74,12 @@
 
 
 % - Network types supported:
-		Pair, Star, not very interesting.
+%		Pair, Star, not very interesting.
 %		Mesh is what we're using.
 \subsection{Network Topology Examples}
 \frame{\frametitle{Network Topology Examples}
 \begin{figure}
 \centering
-\includegraphics[scale=.8]{Diagrams/ZigBeeNetworkTypes.png}
+\includegraphics[scale=.35]{Diagrams/ZigBeeNetworkTypes.png}
 \end{figure}
 }
