git-svn-id: svn://dunari.cis.vtc.edu/POWER@243 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Presentation/grace.tex
+++ b/Documents/Presentation/grace.tex
@@ -1,6 +1,7 @@
 \subsection{What I'm working on - Grace}
 
 \frame{
+ \frametitle{What I'm working on - Grace}
  \begin{itemize}
   \item Display - Front-end
   \item Graphs  
