More small fixes
git-svn-id: svn://dunari.cis.vtc.edu/POWER@245 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Presentation/index.tex
+++ b/Documents/Presentation/index.tex
@@ -55,9 +55,9 @@
 
 \title{POW-R}
 \subtitle{Power Outlet Wireless Reporter}
-\author[Innotek]{Charles Hathaway\\Grace De Geus\\Niloc Quimby\\Nate Pickett}
+\author[]{Charles Hathaway\\Grace De Geus\\Niloc Quimby\\Nate Pickett}
 %\institute[Innotek]{\includegraphics[width=20mm]{Pictures/Innotek.png}}
-\date{December $7^{rd}$, 2012}
+\date{December $7^{th}$, 2012}
 
 \begin{document}
 
