--- a/Documents/Presentation/questions.tex
+++ b/Documents/Presentation/questions.tex
@@ -1,5 +1,9 @@
+\subsection{Questions}
+
 \frame{
     \begin{center}
         {\huge Questions?}
+        
+        {\small Made with \LaTeX{} }
     \end{center}
 }
