git-svn-id: svn://dunari.cis.vtc.edu/POWER@246 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Presentation/grace.tex
+++ b/Documents/Presentation/grace.tex
@@ -3,7 +3,14 @@
 \frame{
  \frametitle{What I'm working on - Grace}
  \begin{itemize}
-  \item Display - Front-end
-  \item Graphs  
+  \item Display 
+	\begin{enumerate}[A.]
+		\item  Front-end
+	\end{enumerate}   
+  \item Database
+	\begin{enumerate}[A.]
+		\item Back-end modules
+	\end{enumerate}   
+ \item Graphs  
  \end{itemize}
 }
