git-svn-id: svn://dunari.cis.vtc.edu/POWER@248 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Presentation/grace.tex
+++ b/Documents/Presentation/grace.tex
@@ -9,7 +9,7 @@
 	\end{enumerate}   
   \item Database
 	\begin{enumerate}[A.]
-		\item Back-end modules
+		\item Back-end Satellite module
 	\end{enumerate}   
  \item Graphs  
  \end{itemize}
