Added some seperaters to the software
git-svn-id: svn://dunari.cis.vtc.edu/POWER@250 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Presentation/software.tex
+++ b/Documents/Presentation/software.tex
@@ -1,5 +1,11 @@
 \section{Software}
 
+\frame{
+ \begin{center}
+  { \huge Software Overview}
+ \end{center}
+}
+
 \subsection{Overview}
 
 \frame {
@@ -64,6 +70,13 @@
 }
 
 \subsection{Interesting problems}
+
+\frame{
+ \begin{center}
+  { \huge Interesting Problems}
+ \end{center}
+}
+ 
 
 \frame{
  \frametitle{Power Bill Guestimator}
