All files added, finally.
git-svn-id: svn://dunari.cis.vtc.edu/POWER@251 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Presentation/index.tex
+++ b/Documents/Presentation/index.tex
@@ -56,7 +56,6 @@
 \title{POW-R}
 \subtitle{Power Outlet Wireless Reporter}
 \author[]{Charles Hathaway\\Grace De Geus\\Niloc Quimby\\Nate Pickett}
-%\institute[Innotek]{\includegraphics[width=20mm]{Pictures/Innotek.png}}
 \date{December $7^{th}$, 2012}
 
 \begin{document}
@@ -65,14 +64,12 @@
     \titlepage
 }
 
-\section[Outline]{}
-
 
 \section{Overview}
-
-
+\input{overview}
 
 \section{Requirements}
+\input{requirements}
 
 \section{The People}
 \input{group}
@@ -81,10 +78,8 @@
 \input{nate}
 \input{niloc}
 
-
-
 \section{Architecture}
-
+\input{architectural_overview}
 \input{ZigBee}
 \input{satellite}
 
