git-svn-id: svn://dunari.cis.vtc.edu/POWER@253 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Presentation/index.tex
+++ b/Documents/Presentation/index.tex
@@ -78,7 +78,7 @@
 \input{nate}
 \input{niloc}
 
-\section{Architecture}
+\section{Architectural Overview}
 \input{architectural_overview}
 \input{satellite}
 \input{ZigBee}
