--- a/Documents/Presentation/requirements.tex
+++ b/Documents/Presentation/requirements.tex
@@ -1,154 +1,78 @@
-\section{Software}
 
-\subsection{Overview}
+\subsection{Requirements Summary}
 
 \frame {
- \frametitle{Software Overview}
- \begin{itemize}
-  \item Python on the backend
-  \begin{enumerate}[A.]
-   \item Django for the REST, HTTP stuff
-   \item Custom python to interact with Arduino interface
-  \end{enumerate}
-  \item Heavy Javascript on the frontend
-  \begin{enumerate}[A.]
-   \item jqplot for creating graphs (jQuery included)
-   \item RequireJS for module dependency and loading
-   \item BackboneJS for MVC architecture
-  \end{enumerate}
- \end{itemize}
+ \frametitle{Satellite Requirements}
+\begin{itemize}
+ \item Standard NEMA 5-15 mains electrical outlets
+ \item Two outlet sockets on the opposite side of the plugs %if it takes up two outlets, it should provide two outlets
+ \item Less than 5\% error on readings 5 %current and voltage 
+ \item Power draw less than 1W per Satellite
+ \item Broadcasts information up to 500M
+ \item Transmits every 1.0 seconds
+ \item Zigbee compatible
+ \item Encrypted communication
+\end{itemize}
 }
 
 \frame{
- \frametitle{Backend Overview}
- \begin{itemize}
-  \item Django will be used to handle database
-  \item Tastypie will be used to prototype the REST API
-  \item Django admin will be used to prototype the admin interface
-  \item Each functional area of the project will be a Django module
-  \begin{enumerate}[A.]
-   \item Power Bill Guestimator
-   \item Satellite
-   \item REST API
-  \end{enumerate}
- \end{itemize}
+\frametitle{Server Requirements}
+\begin{itemize}
+ \item Physical Server inside the monitored building
+ \item Runs on less than 10 W
+ \item Hosts web server for Display
+ \item Button to connect Satellites
+ \item Ability to connect to the user's network
+ \item Zigbee compatible
+ \item Encrypted communication
+\end{itemize}
 }
 
 \frame{
- \frametitle{Backend Overview}
- \begin{center}
-  \includegraphics[width=0.8\textwidth]{Diagrams/ServerDependency.jpg}
- \end{center}
+\frametitle{Display Requirements}
+\begin{itemize}
+ \item User Management
+ \item Group Management
+ \item Device Management
+ \item Satellite Management
+\end{itemize}
 }
 
 \frame{
- \frametitle{Frontend Overview}
- \begin{itemize}
-  \item RequireJS - Loads all the required modules for each page
-  \begin{enumerate}[A.]
-   \item Helps keep the scope clean
-   \item Enhances modular development
-  \end{enumerate}
-  \item Backbone.js - MVC Architecture on the client-side
-  \item iCanHaz - Provides the 'V' part of MVC
-  \item jqplot - Renders charts and graphs
-  \item jQuery - Deals with all the behind-the-scenes AJAX stuff
- \end{itemize}
+\frametitle{Display Requirements Cont.}
+\begin{itemize}
+ \item View Data
+	\begin{itemize}
+	 \item View Device Power Consumption
+		 %Shows the user power consumption on a per-device (or device group) basis
+	 \item View Power Consumption Over Time
+		 % Shows the user power consumption over a specified range of time
+		 % Includes total and per-device power consumption
+	 \item View Device Cost Over Time
+	%Shows the user the cost to run a device, or group of devices, over a specified time range
+		% Shows the user a comparison of device costs over a specified range with a given interval E.g. Show them the device cost every month for the past year
+	
+	\end{itemize}
+\end{itemize}
 }
 
 \frame{
- \frametitle{Frontend Overview}
- \begin{center}
-  \includegraphics[width=0.8\textwidth]{Diagrams/ClientDependency.jpg}
- \end{center}
+ \frametitle{Display Requirements Cont.}
+\begin{itemize}	
+	\item  Power Bill Guesstimator
+	\begin{itemize}
+	 \item View cost to run a specified device over a period of time in the future
+	 \item View cost to run multiple devices over a period of time
+	 \item View expected power bill if a device is added
+	 \item Allow the user to specify cost of power for
+	 \begin{itemize}
+		\item Specific time ranges
+		\item Specific power-usage ranges
+		 \item E.g. Power cost the user \$0.08 per kW/hr for 
+		 	the first 500 kW/hrs, and \$0.10 after that
+		\end{itemize}
+	\end{itemize}
+\end{itemize}
 }
 
-\subsection{Interesting problems}
 
-\frame{
- \frametitle{Power Bill Guestimator}
- \begin{itemize}
-  \item Power companies have different ways of charging
-  \begin{enumerate}[A.]
-   \item Power consumptions tiers
-   \item Prime-time vs Off-time
-  \end{enumerate}
-  \item Cost of power can fluctuate (over long periods of time)
-  \item Need to keep a history
-  \item Database-consolidation can't mix power "tiers"
- \end{itemize}
-}
- 
-\frame{
- \frametitle{Power Bill Guestimator Solutions}
- \begin{itemize}
-  \item Support all methods of charging power
-  \item Store key in data table indicating what power "tier" applies
-  \item Calculate current power tier at runtime
-  \begin{enumerate}[A.]
-   \item Scheduling problem
-   \item Calculate during save for efficiency
-  \end{enumerate}
- \end{itemize}
-}
-
-\frame{
- \frametitle{Limited Resources}
- \begin{itemize}
-  \item Server must be low powered
-  \begin{enumerate}[A.]
-   \item Limited processing power
-   \item Limit memory capacity
-  \end{enumerate}
-  \item Server must store data for years
-  \item Server must be able to serve many clients
-  \item Server must be online 24/7 with some reliability
-  \item Server must be able to process data from all Satellites
- \end{itemize}
-}
-
-\frame{
- \frametitle{Limited Resources Solution}
- \begin{itemize}
-  \item Bare-bones operating system
-  \item Compacting database
-  \item Offload templating to clients via Javascript
-  \begin{enumerate}[A.]
-   \item REST API
-   \item JSON
-  \end{enumerate}
-  \item Use well-known and tested components
-  \item Use a database which supports simultaneous read/writes
- \end{itemize}
-}
-
-\frame{
- \frametitle{Limited Time}
- \begin{itemize}
-  \item We have 2 software engineers, not full time
-  \item We have 3 computer engineers, not full time
-  \begin{enumerate}[A.]
-   \item Most focus on the hardware
-  \end{enumerate}
-  \item Lots of implied requirements
-  \begin{enumerate}[A.]
-   \item Access control
-   \item Extensible API
-   \item History tables
-  \end{enumerate}
- \end{itemize}
-}
-
-\frame{
- \frametitle{Limited Time - Solutions}
- \begin{itemize}
-  \item Modular - Prototype components with the expectation of complete replacements
-  \item Open Source - Utilize free libraries
-  \item One stone for many birds
-  \begin{enumerate}[A.]
-   \item Use this project for other classes
-   \item Use architecture and design that we're familiar with
-   \item Reusable components
-  \end{enumerate}
- \end{itemize}
-}
