--- a/Documents/Presentation/overview.tex
+++ b/Documents/Presentation/overview.tex
@@ -3,7 +3,11 @@
 \frame{
  \frametitle{Project Overview}
  \begin{itemize}
-
-  \item Development
+  \item What is POW-R?
+  \item Satellite
+  \item Server
+  \item Display
  \end{itemize}
 }
+%The POW-R project aims to produce a low cost, low powered, device that will allow home owners to track their power consumption on a per-device basis. 
+%The hope is that by allowing home owners to see where all their power is going, they can take steps to disable or replace the most inefficient offenders.
