git-svn-id: svn://dunari.cis.vtc.edu/POWER@257 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Presentation/nate.tex
+++ b/Documents/Presentation/nate.tex
@@ -3,6 +3,7 @@
 \frame{
  \frametitle{What I'm working on - Nate}
  \begin{itemize}
+  \item Prototyping Hardware
   \item Satellite
  \end{itemize}
 }
