--- a/Documents/Presentation/satellite.tex
+++ b/Documents/Presentation/satellite.tex
@@ -1,22 +1,29 @@
 \section{Satellite}
+\frame{
+\frametitle{What are the Satellites?}
+\begin{itemize}
+\item Satellites are the devices in the outlets.
+\begin{itemize}
+\item Do all of the data measuring.
+\end {itemize}
+\end{itemize}
+}
+
 
 \subsection{Overview}
-
 \frame {
  \frametitle{Satellite Overview}
- \begin{itemize}
-  \item Filler
- \end{itemize}
+\begin{center}
+ \includegraphics[width=0.8\textwidth]{Diagrams/DetailOverview.png}
+\end{center}
 }
 
 \frame{
  \frametitle{Measurement Hardware}
  \begin{itemize}
  \item Current Transformer
- \item Voltmeter
  \end{itemize}
-}
-
-\frame{
- \frametitle{Communications Hardware}
+ \begin{center}
+  \includegraphics[width=0.8\textwidth]{Diagrams/CurrentTransformer.png}
+  \end{center}
 }
