git-svn-id: svn://dunari.cis.vtc.edu/POWER@259 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Presentation/satellite.tex
+++ b/Documents/Presentation/satellite.tex
@@ -2,9 +2,10 @@
 \frame{
 \frametitle{What are the Satellites?}
 \begin{itemize}
-\item Satellites are the devices in the outlets.
+\item Satellites are the devices in the outlets
 \begin{itemize}
-\item Do all of the data measuring.
+\item Do all of the data measuring
+\item Talk to each other
 \end {itemize}
 \end{itemize}
 }
@@ -19,11 +20,48 @@
 }
 
 \frame{
+ \frametitle{Measurement Hardware Overview}
+ \begin{center}
+  \includegraphics[width=0.8\textwidth]{Diagrams/MeasureCircuit.png}
+  \end{center}
+}
+
+\frame{
  \frametitle{Measurement Hardware}
  \begin{itemize}
  \item Current Transformer
  \end{itemize}
  \begin{center}
   \includegraphics[width=0.8\textwidth]{Diagrams/CurrentTransformer.png}
+  \end{center}
+}
+
+\frame{
+ \frametitle{Measurement Hardware}
+ \begin{itemize}
+ \item Voltmeter
+ \end{itemize}
+ \begin{center}
+  \includegraphics[width=0.8\textwidth]{Diagrams/VoltMeter.jpg}
+  \end{center}
+}
+
+\frame{
+ \frametitle{Interface Board}
+ \begin{itemize}
+ \item Arduino
+ \end{itemize}
+ \begin{center}
+  \includegraphics[width=0.8\textwidth]{Diagrams/XBee&Arduino.png}
+  \end{center}
+}
+
+\frame{
+ \frametitle{Communications Hardware}
+ \begin{itemize}
+ \item XBee Radio
+ \end{itemize}
+ \begin{center}
+  \includegraphics[width=0.6\textwidth]{Diagrams/XBee.jpg}
   \end{center}
 }
