git-svn-id: svn://dunari.cis.vtc.edu/POWER@260 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Presentation/ZigBee.tex
+++ b/Documents/Presentation/ZigBee.tex
@@ -67,7 +67,7 @@
 			\item Routers
 			\item End-devices
 		\end{itemize}
-		\item Addressing scheme supports 
+		\item Addressing scheme supports MANY radios
 		\item Supports many network topologies
 	\end{itemize}
 }
