--- a/Documents/Presentation/index.tex
+++ b/Documents/Presentation/index.tex
@@ -71,14 +71,14 @@
 \section{Requirements}
 \input{requirements}
 
-\section{The People}
+\section{Team}
 \input{group}
 \input{charles}
 \input{grace}
 \input{nate}
 \input{niloc}
 
-\section{Architectural Overview}
+\section{Architecture}
 \input{architectural_overview}
 \input{satellite}
 \input{ZigBee}
