git-svn-id: svn://dunari.cis.vtc.edu/POWER@261 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Presentation/requirements.tex
+++ b/Documents/Presentation/requirements.tex
@@ -1,7 +1,9 @@
 
 \subsection{Requirements Summary}
 \frame{
-\frametitle{Functional Requirements}
+\begin{center}
+  { \huge Functional Requirements}
+ \end{center}
 }
 
 \frame {
@@ -79,8 +81,9 @@
 }
 
 \frame{
-
-\frametitle{Non-functional Requirements}
+\begin{center}
+  { \huge Non-functional Requirements}
+ \end{center}
 }
 
 \frame{
