--- a/Documents/Presentation/software.tex
+++ b/Documents/Presentation/software.tex
@@ -69,8 +69,8 @@
  \end{center}
 }
 
-\subsection{Interesting problems}
-
+\section{Interesting Problems}
+\subsection{Interesting Problems}
 \frame{
  \begin{center}
   { \huge Interesting Problems}
