--- a/Documents/Presentation/ZigBee.tex
+++ b/Documents/Presentation/ZigBee.tex
@@ -9,7 +9,7 @@
 				\item XBee is a small digital radio (Hardware)
 				\item ZigBee is the specification it talks over ('Protocol')
 			\end{itemize}
-		\item All inter-Satellite ("Mesh") communication		
+		\item All inter-Satellite ("Mesh") communication		 \cite{Book:ZigBee}
 	\end{itemize}
 }
 
