--- a/Documents/Presentation/index.tex
+++ b/Documents/Presentation/index.tex
@@ -90,5 +90,12 @@
 
 \input{questions}
 
+\frame{
+ \frametitle{References}
+% References
+ \bibliographystyle{plain}
+ \bibliography{biblo}
+}
+
 \end{document}
 
