--- a/Documents/Presentation/software.tex
+++ b/Documents/Presentation/software.tex
@@ -13,14 +13,14 @@
  \begin{itemize}
   \item Python on the backend
   \begin{enumerate}[A.]
-   \item Django for the REST, HTTP stuff
+   \item Django for the REST, HTTP stuff \cite{Web:Django}
    \item Custom python to interact with Arduino interface
   \end{enumerate}
   \item Heavy Javascript on the frontend
   \begin{enumerate}[A.]
-   \item jqplot for creating graphs (jQuery included)
-   \item RequireJS for module dependency and loading
-   \item BackboneJS for MVC architecture
+   \item jqplot for creating graphs (jQuery included) \cite{Web:jQuery}
+   \item RequireJS for module dependency and loading \cite{Web:RequireJS}
+   \item BackboneJS for MVC architecture \cite{Web:Backbone}
   \end{enumerate}
  \end{itemize}
 }
