Added some slideage, added a library for in src/satellite
git-svn-id: svn://dunari.cis.vtc.edu/POWER@553 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Final Presentation/index.tex
+++ b/Documents/Final Presentation/index.tex
@@ -67,9 +67,12 @@
 
 \section{Architecture}
 \input{xBeeRadios}
+\input{coordServer}
+
 
 
 \section{Closing}
+\input{reflection}
 \input{demoquestions}
 
 \end{document}
