--- a/Documents/Presentation/index.tex
+++ b/Documents/Presentation/index.tex
@@ -55,7 +55,7 @@
 
 \title{POW-R}
 \subtitle{Power Outlet Wireless Reporter}
-\author[]{Charles Hathaway\\Grace De Geus\\Niloc Quimby\\Nate Pickett}
+\author[]{Grace De Geus\\Charles Hathaway\\Forest Immel\\Nate Pickett\\Niloc Quimby}
 \date{December $7^{th}$, 2012}
 
 \begin{document}
