Added a few software slides
git-svn-id: svn://dunari.cis.vtc.edu/POWER@565 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Final Presentation/index.tex
+++ b/Documents/Final Presentation/index.tex
@@ -66,13 +66,15 @@
 
 
 \section{Architecture}
+\input{architectural_overview}
 \input{xBeeRadios}
 \input{coordServer}
 
-
+\input{softwareArchitecture}
+\input{softwareImplementation}
 
 \section{Closing}
-\input{reflection}
+%\input{reflection}
 \input{demoquestions}
 
 \end{document}
