reflections now added
git-svn-id: svn://dunari.cis.vtc.edu/POWER@567 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Final Presentation/index.tex
+++ b/Documents/Final Presentation/index.tex
@@ -74,7 +74,7 @@
 \input{softwareImplementation}
 
 \section{Closing}
-%\input{reflection}
+\input{reflection}
 \input{demoquestions}
 
 \end{document}
