Test sides added, in progress.
git-svn-id: svn://dunari.cis.vtc.edu/POWER@571 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Final Presentation/index.tex
+++ b/Documents/Final Presentation/index.tex
@@ -65,6 +65,7 @@
 }
 
 \input{requirements}
+
 \section{Architecture}
 \input{architectural_overview}
 \input{xBeeRadios}
@@ -72,6 +73,8 @@
 
 \input{softwareArchitecture}
 \input{softwareImplementation}
+
+\input{test}
 
 \section{Closing}
 \input{reflection}
