Test slides finished.
git-svn-id: svn://dunari.cis.vtc.edu/POWER@572 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Final Presentation/test.tex
+++ b/Documents/Final Presentation/test.tex
@@ -11,57 +11,48 @@
 \frame{
   \frametitle{Test Cases - Unit}
     \begin{itemize}
-	  \item 
-	  \item 
-	  \item 
-	  \item 
-	  \item 
+	  \item REST API
+	  \item Unicode and Backend
+	  \item Python Automated Tests
+	  \item Zigbee Mesh Test
+	  \item Voltage Circut Test
+	  \item Current Circuit Test
 	\end{itemize}
 }
 
 \frame{
   \frametitle{Test Cases - Integration}
     \begin{itemize}
-	  \item 
-	  \item 
-	  \item 
-	  \item 
-	  \item 
+	  \item Create a Graph
+	  \item View Graphs
+	  \item Data Retention Across Satellites
+	  \item Zigbee Data Transfer
+	  \item Satellite-to-Server Protocol
 	\end{itemize}
 }
 
 \frame{
   \frametitle{Test Cases - System}
     \begin{itemize}
-	  \item 
-		\begin{itemize}
-		  \item  
-		  \item 
-		  \item 
-		  \item 
-		\end{itemize}
-	  \item 
-		\begin{itemize}
-		  \item 
-		  \item 
-		\end{itemize}
+	  \item Log In
+	  \item Log Out
+	  \item Add Device
+	  \item Disable Device
+	  \item Add User
+	  \item Remove User
+	  \item Rename Device
+	  \item Reassign Device
 	\end{itemize}
 }
 
 \frame{
   \frametitle{Test Cases - Acceptance}
     \begin{itemize}
-	  \item 
-		\begin{itemize}
-		  \item 
-		  \item 
-		\end{itemize}
-	  \item 
-		\begin{itemize}
-		  \item 
-		  \item 
-  		  \item 
-		\end{itemize}
+	  \item Ease of Learning
+	  \item Examining the Satellite
+	  \item Examining the Server
+	  \item Data Loss Error
+	  \item Display Responsiveness
 	\end{itemize}
 }
 
@@ -70,9 +61,16 @@
 \frame{
   \frametitle{Test Results}
     \begin{itemize}
-	  \item 
-	  \item 
-	  \item 
-	  \item 
+	  \item Failed Tests:
+		\begin{itemize}
+			\item Ease of Learning
+			\item Remove User
+		\end{itemize}
+	  \item Corrective Action Taken
+		\begin{itemize}
+			\item Edited four tests to accomodate late changes
+			\item Adjusted User Management page to make "Remove User" test passable
+			\item Made plans for UI changes that would allow "Ease of Learning" test to pass
+		\end{itemize}
 	\end{itemize}
 }
