Added some references, stats page
git-svn-id: svn://dunari.cis.vtc.edu/POWER@574 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Final Presentation/index.tex
+++ b/Documents/Final Presentation/index.tex
@@ -80,5 +80,15 @@
 \input{reflection}
 \input{demoquestions}
 
+\input{stats}
+
+\frame{
+ \frametitle{References}
+% References
+ \bibliographystyle{plain}
+ \bibliography{biblo}
+}
+
+
 \end{document}
 
