--- a/Documents/Final Presentation/softwareArchitecture.tex
+++ b/Documents/Final Presentation/softwareArchitecture.tex
@@ -20,7 +20,7 @@
   \begin{enumerate}[A.]
    \item jqplot for creating graphs (jQuery included) \cite{Web:jQuery}
    \item django-compress to reduce the Javascript files to a manageable size.
-   \item AngularJS for a MVC architecture that consumes the REST backend
+   \item AngularJS for a MVC architecture that consumes the REST backend \cite{Web:AngularJS}
   \end{enumerate}
  \end{itemize}
 }
