--- a/Documents/Final Presentation/softwareImplementation.tex
+++ b/Documents/Final Presentation/softwareImplementation.tex
@@ -6,6 +6,8 @@
  \end{center}
 }
 
+\subsection{How did things go?}
+
 \frame {
  \frametitle{Software Implementation}
  \begin{itemize}
@@ -23,6 +25,7 @@
  \end{itemize}
 }
 
+\subsection{Changes to the design}
 
 \frame {
  \frametitle{Software Implementation}
