git-svn-id: svn://dunari.cis.vtc.edu/POWER@575 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Final Presentation/architectural_overview.tex
+++ b/Documents/Final Presentation/architectural_overview.tex
@@ -1,8 +1,34 @@
-
-
 \subsection{Overview}
 
 \frame {
  \frametitle{Overview}
 \includegraphics[scale=.65]{Diagrams/ArchitecturalOverview.jpg}
+}
+
+\frame{
+ \frametitle{Satellite Design}
+	\begin{itemize}
+	\item Measurement Hardware
+	\begin{itemize}
+		\item Current transformer
+		\item Voltage regulator/divider
+		\end{itemize}	
+	\end{itemize}
+		
+}
+
+\frame{
+ \frametitle{Current Transformer}
+ \includegraphics[scale=.50]{Diagrams/CurrentTransformer.png}
+}
+
+\frame{
+ \frametitle{Satellite Implementation}
+	\begin{itemize}
+		\item Testing
+			\begin{itemize}
+				\item Variac
+				\item Test loads
+			\end{itemize}	
+  \end{itemize}
 }
